updated active user projects

--- a/frontend/src/styles/chart.css
+++ b/frontend/src/styles/chart.css
@@ -3,6 +3,12 @@
     fill: white;
 }
 
+.chart-text{
+    font-size: 10px;
+    fill: white;
+    text-anchor: middle;
+}
+
 .pie-chart-svg
 {
     display: block;
